--- a/jetty-jersey-master/pom.xml
+++ b/jetty-jersey-master/pom.xml
@@ -67,6 +67,18 @@
 			<version>2.3</version>
 		</dependency>
 
+		<!-- hsqldb -->
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
